@@ -14,6 +14,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- make WFS numberOfFeatures match maxFeatures if passed (#2907)
+
 - Add logging in layer visibility tests to help users find why layers don't draw (#3054)
 
 - include PNG libs first (#3046)
